@@ -11,6 +11,8 @@ Revision history for TAP-Parser
       T::P::Iterator::(Array|Process|Stream) so that we have a
       process specific iterator with which to experiment with
       STDOUT/STDERR merging.
+    - Removed vestigial exit status handling from T::P::I::Stream.
+    - Removed unused pid interface from T::P::I::Process.
 
 0.51 12 March 2007
     - 'execrc' file now allows 'regex' matches for tests.
